[project]
name = "fileengine-ldap-manager"
version = "0.1.0"
description = "FileEngine tenant user & role administration API (LDAP) + self-service profile/password"
license = {text = "AGPL-3.0-or-later"}
authors = [{name = "James Hickman", email = "james@rationalboxes.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    "ldap3>=2.9",
    "pydantic[email]>=2.0",
    "psycopg[binary]>=3.1",   # per-tenant email templates (§5.1)
    "redis>=5.0",             # invite + reset tokens (§5, §5.2)
]
# The audit publisher (`audit_service.publisher`, from ../audit_service — the
# fileengine_security_event_logger repo) is used for auth-category audit emission
# when FILEENGINE_AUDIT_ENABLED is set. Install it (`pip install ../audit_service`)
# or rely on the sibling-checkout bootstrap in ldap_manager.audit.

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "httpx>=0.27"]

[project.scripts]
fileengine-ldap-manager = "ldap_manager.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = ["live: integration test that needs LDAP + the bridge reachable"]
